remove old roads and ground[], add black and ship class files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
     </main>
     <script src="Star.js"></script>
+    <script src="Ship.js"></script>
     <script src="sketch.js"></script>
     
   </body>
