--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <main>
     </main>
     <script src="Block.js"></script>
+    <script src="Projectile.js"></script>
+
     <script src="Star.js"></script>
     <script src="Ship.js"></script>
     <script src="sketch.js"></script>
